--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "movie-ssr-app",
   "version": "1.0.0",
   "main": "server.js",
+  "engines": {
+    "node": "8.9.0",
+    "npm": "5.6.0"
+  },
   "scripts": {
     "dev": "npm-run-all --parallel dev:*",
     "dev:server": "nodemon --watch build --exec \"node build/bundle.js\"",
@@ -10,7 +14,8 @@
     "build": "npm-run-all --parallel build:*",
     "build:server": "webpack --config webpack.server.js -p",
     "build:client": "webpack --config webpack.client.js -p",
-    "start": "node build/bundle.js"
+    "start": "node build/bundle.js",
+    "postinstall": "npm-run-all --parallel build:*"
   },
   "dependencies": {
     "axios": "^0.17.1",
