--- a/package.json
+++ b/package.json
@@ -35,9 +35,7 @@
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "serialize-javascript": "^1.4.0"
-  },
-  "devDependencies": {
+    "serialize-javascript": "^1.4.0",
     "autoprefixer": "^7.2.5",
     "cssnano": "^3.10.0",
     "postcss-loader": "^2.0.10",
